# to-olx

./: BETA_POLISH_SUMMARY.md  BUDGET_IMPLEMENTATION_SUMMARY.md  PREDICTIVE_INSIGHTS_IMPLEMENTATION.md  README.md
debtwise-api/: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
debtwise-api/.github/workflows/: main.yml
debtwise-api/app/: __init__.py  main.py
debtwise-api/app/api/: dependencies.py
debtwise-api/app/core/: __init__.py  config.py  database.py  db_init.py  logging.py  middleware.py  monitoring.py  openapi.py  redis.py  security.py  security_improvements.py  security_middleware.py
debtwise-api/app/models/: __init__.py  base.py  budget.py  debt.py  insight.py  transaction.py  user.py
debtwise-api/app/schemas/: __init__.py  auth.py  budget.py  debt.py  insight.py  transaction.py  user.py
debtwise-api/app/services/: __init__.py  analytics.py  budget.py  debt.py  insights.py  transaction.py
debtwise-api/app/utils/: __init__.py
debtwise-api/deployment/: BETA_DEPLOYMENT_GUIDE.md
debtwise-api/deployment/beta/: .env.example  docker-compose.beta.yml
debtwise-api/docs/: BUDGETING_FEATURE.md  DEBT_MANAGEMENT.md  PREDICTIVE_INSIGHTS.md  SPENDING_FEATURE.md
debtwise-api/examples/: budget_example.py  insights_example.py  spending_example.py
debtwise-api/scripts/: generate_api_docs.py  test_coverage.sh
debtwise-api/tests/: conftest.py
debtwise-api/tests/api/: __init__.py
debtwise-api/tests/core/: __init__.py  (+4 more)
(+37 files in other folders)
